--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,16 @@
    padding: 0;
    box-sizing: border-box;
 }
+
+/* Form Styling  */
+.form-banner img{
+   height: 100vh;
+   width: 100%;
+}
+
+.form-container{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100vh;
+}
