--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,3 +48,19 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* ======================
+--------- navbar 
+=================== */
+
+.navbar {
+  background-color: black !important;
+  color: white !important;
+  padding-left: 10px;
+}
+.nav-link,
+.navbar-brand {
+  background-color: black !important;
+  color: white !important;
+}
